--- a/app/src/main/res/layout/item_family_member.xml
+++ b/app/src/main/res/layout/item_family_member.xml
@@ -1,66 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_4">
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_8">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/personImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:src="@mipmap/ic_default_portrait" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_4"
-        android:orientation="horizontal">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/dp_12">
+
+        <TextView
+            android:id="@+id/personRelation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+
+        <TextView
+            android:id="@+id/personName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_12"
+            android:layout_toEndOf="@id/personRelation"
+            android:text=""
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+
+        <TextView
+            android:id="@+id/personLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/personRelation"
+            android:layout_marginTop="@dimen/dp_8"
+            android:text="---"
+            android:textColor="@color/black9"
+            android:textSize="@dimen/sp15" />
 
         <ImageView
-            android:id="@+id/personImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="@dimen/dp_4"
-            android:src="@mipmap/ic_default_portrait" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_12">
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/icon_edit" />
 
-            <TextView
-                android:id="@+id/personRelation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/black6"
-                android:textSize="@dimen/sp15" />
+    </RelativeLayout>
 
-            <TextView
-                android:layout_marginLeft="@dimen/dp_12"
-                android:id="@+id/personName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/personRelation"
-                android:text=""
-                android:textColor="@color/black6"
-                android:textSize="@dimen/sp15" />
-
-            <TextView
-                android:id="@+id/personLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/personRelation"
-                android:layout_marginTop="@dimen/dp_8"
-                android:text="---"
-                android:textColor="@color/black9"
-                android:textSize="@dimen/sp15" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/icon_edit" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
