--- a/app/src/main/res/layout/item_health_info.xml
+++ b/app/src/main/res/layout/item_health_info.xml
@@ -18,8 +18,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@mipmap/icon_clock" />
 
             <TextView
@@ -27,9 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_8"
-                android:text="2019-02-24 12:03"
                 android:textColor="@color/black6"
-                android:textSize="@dimen/sp15" />
+                android:textSize="@dimen/sp16" />
         </LinearLayout>
 
         <ImageView
@@ -45,7 +44,6 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="失眠的危害有哪些？失眠会导致哪些疾病？"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp_16" />
     </LinearLayout>
