--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -3,17 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="@android:color/transparent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     app:cardUseCompatPadding="true">
 
     <ImageView
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:id="@+id/imageView"
-        android:src="@mipmap/bg_head"
-        android:layout_width="match_parent"
+        android:src="@mipmap/ic_default_portrait"
+        android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center" />
 
