--- a/app/src/main/res/layout/item_family_member.xml
+++ b/app/src/main/res/layout/item_family_member.xml
@@ -4,6 +4,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/selector_item_click_bg"
     android:orientation="horizontal"
     android:padding="@dimen/dp_8">
 
@@ -15,7 +16,8 @@
         android:src="@mipmap/ic_default_portrait" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/dp_12">
@@ -48,13 +50,12 @@
             android:textColor="@color/black9"
             android:textSize="@dimen/sp15" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/icon_edit" />
 
     </RelativeLayout>
 
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="8dp"
+        android:src="@mipmap/icon_edit" />
 </LinearLayout>
