--- a/app/src/main/res/layout/activity_reset_pwd.xml
+++ b/app/src/main/res/layout/activity_reset_pwd.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/layout_titlebar"
+        layout="@layout/layout_title_bar"
         android:visibility="gone" />
 
     <ImageView
