--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_titlebar" />
+    <include layout="@layout/layout_title_bar" />
 
     <EditText
         android:id="@+id/edTitle"
