--- a/app/src/main/res/layout/activity_info_list.xml
+++ b/app/src/main/res/layout/activity_info_list.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/layout_titlebar"/>
+    <include layout="@layout/layout_title_bar"/>
 
     <include layout="@layout/layout_recycler_view"/>
 
