--- a/app/src/main/res/layout/activity_personal_msg.xml
+++ b/app/src/main/res/layout/activity_personal_msg.xml
@@ -5,7 +5,7 @@
     android:background="#eee"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_titlebar" />
+    <include layout="@layout/layout_title_bar" />
 
     <ScrollView
         android:layout_width="match_parent"
