--- a/app/src/main/res/layout/activity_update_phone.xml
+++ b/app/src/main/res/layout/activity_update_phone.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_titlebar" />
+    <include layout="@layout/layout_title_bar" />
 
 </LinearLayout>
