--- a/app/src/main/res/layout/activity_personal_msg.xml
+++ b/app/src/main/res/layout/activity_personal_msg.xml
@@ -71,15 +71,14 @@
                     android:textColor="@color/black6"
                     android:textSize="@dimen/sp15" />
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+
 
                 <TextView
+                    android:layout_marginLeft="@dimen/dp_8"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:id="@+id/tvNickName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="未填写"
                     android:maxLines="1"
