--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,13 +5,22 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/appThemeColor"
-        android:gravity="center">
+        android:background="@color/appThemeColor">
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/ivBack"
+            android:padding="@dimen/dp_8"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_chevron_left_black_36dp" />
 
         <TextView
+            android:layout_centerInParent="true"
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,7 +28,7 @@
             android:textColor="@color/white"
             android:textSize="@dimen/sp15" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <include layout="@layout/layout_recycler_view" />
 
