--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <dimen name="sp12">12sp</dimen>
-    <dimen name="sp12.5">12.5sp</dimen>
+    <dimen name="sp12_5">12.5sp</dimen>
     <dimen name="sp13">13sp</dimen>
     <dimen name="sp14">14sp</dimen>
     <dimen name="sp15">15sp</dimen>
@@ -18,9 +18,9 @@
     <dimen name="sp26">26sp</dimen>
 
 
-    <dimen name="dp_0.5">0.5dp</dimen>
+    <dimen name="dp_0_5">0.5dp</dimen>
     <dimen name="dp_1">1dp</dimen>
-    <dimen name="dp_1.5">1.5dp</dimen>
+    <dimen name="dp_1_5">1.5dp</dimen>
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_3">3dp</dimen>
     <dimen name="dp_4">4dp</dimen>
