--- a/app/src/main/res/layout/activity_edit_nav.xml
+++ b/app/src/main/res/layout/activity_edit_nav.xml
@@ -86,6 +86,26 @@
         android:background="#f6f6f6" />
 
     <RelativeLayout
+        android:id="@+id/rlEleList"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="电子围栏"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
+
+    <RelativeLayout
         android:id="@+id/rlAddEle"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -99,4 +119,5 @@
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
+
 </LinearLayout>
