--- a/app/src/main/res/layout/item_family_member.xml
+++ b/app/src/main/res/layout/item_family_member.xml
@@ -16,11 +16,11 @@
         android:src="@mipmap/ic_default_portrait" />
 
     <RelativeLayout
-        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dp_12">
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/personRelation"
@@ -40,25 +40,21 @@
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
 
-        <TextView
-            android:id="@+id/personLabel"
+        <com.zhy.view.flowlayout.TagFlowLayout
+            android:id="@+id/flowLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/personRelation"
-            android:layout_marginTop="@dimen/dp_6"
-            android:text="---"
-            android:textColor="@color/black9"
-            android:textSize="@dimen/sp14" />
+            android:layout_below="@id/personRelation" />
 
 
     </RelativeLayout>
 
     <ImageView
-        android:padding="@dimen/dp_8"
         android:id="@+id/imgEdit"
-        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginEnd="8dp"
+        android:padding="@dimen/dp_8"
         android:src="@mipmap/icon_edit" />
 </LinearLayout>
