--- a/app/src/main/res/layout/activity_device_bind.xml
+++ b/app/src/main/res/layout/activity_device_bind.xml
@@ -19,6 +19,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/ivScan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/icon_scan_device" />
