--- a/commonlib/src/main/res/layout/qr_camera.xml
+++ b/commonlib/src/main/res/layout/qr_camera.xml
@@ -25,8 +25,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@android:color/darker_gray">
+        android:layout_height="50dp"
+        android:background="@color/appThemeColor">
 
         <ImageButton
             android:id="@+id/back_ibtn"
