首页提醒列表调试

--- a/app/src/main/res/layout/item_remind_layout.xml
+++ b/app/src/main/res/layout/item_remind_layout.xml
@@ -3,9 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="10dp">
 
     <ImageView
         android:layout_width="20dp"
@@ -17,15 +16,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
-        android:text="11:30"
         android:textSize="@dimen/sp_15" />
 
     <TextView
         android:id="@+id/tvContent"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
-        android:singleLine="true"
-        android:text="吃降血压的药物，每次一粒"
+        android:layout_weight="1"
         android:textSize="@dimen/sp_15" />
 </LinearLayout>
