--- a/app/src/main/res/layout/layout_custom_info_window.xml
+++ b/app/src/main/res/layout/layout_custom_info_window.xml
@@ -89,8 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_8"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp15" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -116,8 +115,7 @@
                 android:layout_marginStart="@dimen/dp_8"
                 android:layout_weight="1"
                 android:maxLines="1"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp15" />
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/tvNav"
