--- a/app/src/main/res/layout/item_label_layout.xml
+++ b/app/src/main/res/layout/item_label_layout.xml
@@ -2,17 +2,16 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:layout_margin="@dimen/dp_6"
-    android:layout_height="wrap_content">
-
+    android:background="@color/white"
+    android:padding="@dimen/dp_8">
 
     <TextView
         android:id="@+id/tvTagName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:background="@drawable/shape_tag_unselect"
         android:gravity="center"
         android:padding="@dimen/dp_8"
