--- a/app/src/main/res/layout/item_label_type.xml
+++ b/app/src/main/res/layout/item_label_type.xml
@@ -2,12 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#eee"
     android:orientation="vertical"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_8"
+        android:textColor="@color/black6"
+        android:textSize="@dimen/sp15" />
 
 </LinearLayout>
