--- a/app/src/main/res/layout/layout_custom_info_window.xml
+++ b/app/src/main/res/layout/layout_custom_info_window.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/layoutWindow"
+    android:background="@android:color/transparent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_16"
-    android:background="@color/white"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
