处理地图自定义描点布局显示超出屏幕范围的问题

--- a/app/src/main/res/layout/layout_custom_info_window.xml
+++ b/app/src/main/res/layout/layout_custom_info_window.xml
@@ -111,6 +111,7 @@
                 android:src="@mipmap/icon_location_white" />
 
             <TextView
+                android:maxLength="17"
                 android:id="@+id/tvAddress"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
