--- a/app/src/main/res/layout/activity_edit_nav.xml
+++ b/app/src/main/res/layout/activity_edit_nav.xml
@@ -101,7 +101,25 @@
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
+    <RelativeLayout
+        android:id="@+id/rlRemindList"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="提醒列表"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
