--- a/app/src/main/res/layout/item_daily_sports.xml
+++ b/app/src/main/res/layout/item_daily_sports.xml
@@ -12,13 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textColor="@color/black6"
-        android:textSize="@dimen/sp15" />
+        android:textSize="@dimen/sp16" />
 
     <TextView
         android:id="@+id/tvStepNum"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:drawableLeft="@mipmap/icon_sports_blue"
+        android:drawablePadding="@dimen/dp_8"
+        android:gravity="center_vertical"
         android:text="0"
         android:textColor="@color/appThemeColor"
         android:textSize="@dimen/sp18" />
