--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,6 +67,12 @@
 
     </LinearLayout>
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
